# paw-token

./: README.md
assets/: token-info.json
launch/: Cargo.toml  LAUNCH-CHECKLIST.md  create-token.py  moltbook-announce.md  twitter-thread.md
launch/src/: main.rs
mcp-server/: Cargo.toml  server.py
mcp-server/src/: main.rs
